# filplus-autocap

./: .gitignore  Cargo.toml  README.md  pyproject.toml  test-auction-interactive.py  test-auction.py  test.py
config/: setup.json
docs/: SCHEME.md  mathematical_analysis.md  possible_smart_contracts_architecture.md  scheme.md
docs/python/: package.md
mvp/: Cargo.toml
mvp/allocator/: Cargo.toml
mvp/allocator/src/: allocation.rs  main.rs  masterbot.rs  metadata.rs  old_allocation.rs  old_auction.rs  rpc.rs  transaction.rs  utils.rs
mvp/allocator/src/allocation/: functions.rs  types.rs
mvp/allocator/src/auction/: functions.rs  types.rs
mvp/allocator/src/constants/: mod.rs
mvp/allocator/src/masterbot/: functions.rs  mod.rs  types.rs
mvp/allocator/src/metadata/: types.rs
mvp/allocator/src/registry/: types.rs
mvp/allocator/src/rpc/: functions.rs  types.rs
mvp/allocator/src/runtime/: app.rs  config.rs  logging.rs
mvp/allocator/src/transaction/: functions.rs  types.rs
mvp/allocator/src/wallet/: functions.rs  types.rs
mvp/sp_sender/: Cargo.toml  fund_wallets.sh
mvp/sp_sender/src/: main.rs  metadata.rs  rpc.rs
mvp/sp_sender/src/test/: test1.rs  test2.rs  test3.rs  test4.rs  test5.rs
mvp/src/: allocation.rs  auction.rs  constants.rs  main.rs  masterbot.rs  registry.rs  rpc.rs  transaction.rs
script/: Deploy.s.sol
src/: AutoCap.sol  lib.rs  main.rs  test_interactive_auction.py  utils.rs
src/allocation/: mod.rs
src/auction/: functions.rs
src/filplus_autocap/: bot.py  constants.py  datacap_bot.py  filecoin.py  master_bot.py  revenue_bot.py  storage_provider.py  transaction.py  verified_sp_list.py  wallet.py
src/filplus_autocap/blockchain_utils/: currencies.py  filecoin.py  storage_provider.py  transaction.py  wallet.py
src/filplus_autocap/contracts/: verified_sp_list.py
src/filplus_autocap/contracts/bots/: bot.py  datacap_bot.py  master_bot.py  revenue_bot.py
src/filplus_autocap/utils/: console.py  constants.py  logger.py  setup.py
src/masterbot/: functions.rs  types.rs
src/metadata/: types.rs
src/rpc/: functions.rs  mod.rs
src/runtime/: config.rs  logging.rs  mod.rs
src/transaction/: types.rs
test/: AutoCap.t.sol
tests/sp_sender/src/: metadata.rs  wallet.rs
tests/sp_sender/src/test/: mod.rs  test1.rs  test2.rs  test4.rs  test5.rs
