[tool.poetry]
name = "filplus-autocap"
version = "0.1.0"
description = "Programmable datacap allocator for Filecoin"
authors = ["luca-nik <luca.nicoli.engineer@gmail.com>"]
readme = "README.md"
packages = [
    { include = "filplus_autocap", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"
pandas = "^2.2.3"
aioconsole = "^0.8.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test-auction = "test_interactive_auction:entry_point"
