[package]
name = "filplus-autocap"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core dependencies
base64 = "0.22.1"
hex = "0.4"
anyhow = "1.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_cbor = "0.11"
serde_tuple = "0.5"
dotenv = "0.15.0"
rust_decimal = "1.33"
rust_decimal_macros = "1.33"
dotenvy = "0.15"
multibase = "0.9"
log = "0.4"
env_logger = "0.10"
flexi_logger = "0.27"

# The key insight: use fvm_ipld_encoding 0.2.0 which works with cid 0.8.6
# This way we align with the existing ecosystem instead of fighting it
fvm_shared = "3.2.0"
fvm_ipld_encoding = "0.3.0"
cid = "0.8.6"
multihash = "0.16"

# Now we can keep filecoin-signer if needed
filecoin-signer = "0.10.3"